# ATAT

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  build.rs  wampa.json
.github/: dependabot.yml
.github/workflows/: job-auto-merge.yml  job-build.yml  job-coverage.yml  job-lint.yml  job-release.yml  job-test-medium.yml  job-test-small.yml  on-pullrequest-actions.yml  on-pullrequest.yml  on-tag.yml
features/: clean.feature  login.feature  pull.feature  push.feature  remote.feature
scripts/: coverage_ignore.txt
spec/: instructions.md  requirements.md  spec.md
src/: auth.rs  clean.rs  cli.rs  config.rs  github.rs  lib.rs  main.rs  markdown_parser.rs  output.rs  push.rs  run.rs  storage.rs  todo.rs  whoami.rs
src/cli/: parser.rs
src/github/: issues.rs  pull.rs  push.rs  title.rs
tests/acceptance/: main.rs  steps.rs
