[package]
name = "atat"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
cucumber = "0.22.1"
regex = "1.12.2"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }

[[test]]
name = "acceptance"
harness = false
