[package]
name = "atat"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
pulldown-cmark = "0.13.0"
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
cucumber = "0.23.0"
regex = "1.12.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }

[[test]]
name = "acceptance"
harness = false
